--- a/StarWars/StarWars.vcxproj
+++ b/StarWars/StarWars.vcxproj
@@ -72,9 +72,13 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\biblioteki\SFML-2.5.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\biblioteki\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>C:\biblioteki\SFML-2.5.1\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\biblioteki\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -108,6 +112,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>sfml-graphics.lib; sfml-window.lib;sfml-system.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -139,7 +144,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Ammunition.cpp" />
+    <ClCompile Include="Coordinates.cpp" />
+    <ClCompile Include="Factory.cpp" />
+    <ClCompile Include="Fight.cpp" />
+    <ClCompile Include="GameTurn.cpp" />
+    <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="guns.cpp" />
+    <ClCompile Include="ships.cpp" />
+    <ClCompile Include="SpaceShip.cpp" />
     <ClCompile Include="StarWars.cpp" />
+    <ClCompile Include="WarSide.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ammunition.h" />
+    <ClInclude Include="Coordinates.h" />
+    <ClInclude Include="Factory.h" />
+    <ClInclude Include="Fight.h" />
+    <ClInclude Include="GameTurn.h" />
+    <ClInclude Include="Gun.h" />
+    <ClInclude Include="guns.h" />
+    <ClInclude Include="ships.h" />
+    <ClInclude Include="SpaceShip.h" />
+    <ClInclude Include="WarSide.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
