adding shield, laser etc, changing dodgin into poli method for one type of object

--- a/StarWars/StarWars.vcxproj
+++ b/StarWars/StarWars.vcxproj
@@ -145,6 +145,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Ammunition.cpp" />
+    <ClCompile Include="Components.cpp" />
     <ClCompile Include="Coordinates.cpp" />
     <ClCompile Include="Factory.cpp" />
     <ClCompile Include="Fight.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ammunition.h" />
+    <ClInclude Include="Components.h" />
     <ClInclude Include="Coordinates.h" />
     <ClInclude Include="Factory.h" />
     <ClInclude Include="Fight.h" />
